# Alatar

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  build-multi-arch.bat  build-multi-arch.ps1  build-multi-arch.sh  docker-bake.hcl  docker-compose.prod.yml  docker-compose.yml  multi-arch-build-README.md  pyproject.toml  query.json  test_query.py  worker.py  worker_action_execution.py  worker_comparative_analysis.py  worker_data_retrieval.py  worker_predictive_analysis.py  worker_qualitative_analysis.py  worker_quantitative_analysis.py  worker_recommendation_generation.py
.cursor/rules/: app_structure.mdc  graphql_structure.mdc  project_structure.mdc  worker_setup.mdc
app/: __init__.py  database.py  logging_config.py  main.py  schemas.py
app/agents/: __init__.py  constants.py  orchestrator.py  prompts.py  utils.py
app/agents/departments/: __init__.py  comparative_analysis.py  data_retrieval.py  predictive_analysis.py  qualitative_analysis.py  quantitative_analysis.py  recommendation_generation.py
app/agents/tools/: __init__.py  shopify_tools.py
app/app/: __init__.py
app/auth/: __init__.py  dependencies.py  router.py  service.py
app/core/: __init__.py  config.py  exceptions.py  redis_client.py  security.py
app/crud/: __init__.py  analysis_request.py  base.py  crud_agent_task.py  crud_linked_account.py  crud_proposed_action.py  crud_user.py  crud_user_preferences.py  user.py
app/graphql/: __init__.py  common.py  errors.py  extensions.py  relay.py  resolvers.py  schema.py  types.py  utils.py
app/graphql/extensions/: __init__.py  error_handler.py
app/graphql/resolvers/: __init__.py  analysis_request.py  auth.py  common.py  proposed_action.py  subscription.py  user.py
app/graphql/types/: __init__.py  analysis_request.py  auth.py  common.py  proposed_action.py  shopify.py  user.py  user_error.py
app/models/: __init__.py  agent_task.py  analysis_request.py  cached_shopify_data.py  linked_account.py  proposed_action.py  user.py  user_preferences.py
app/schemas/: __init__.py  analysis_request.py  linked_account.py  pubsub.py  token.py  user.py  user_preferences.py
app/services/: __init__.py  action_executor.py  action_service.py  analysis_queue_service.py  analysis_service.py  permissions.py  pubsub_service.py  queue_client.py  shopify_client.py  shopify_service.py
benchmarks/: sample_eval_dataset.jsonl
docs/: Functionality Overview.md  TODO_Q&A.md  addressing_implementation_gaps.md  extended_overview.md  implementation_plan.md  system_design.md
migrations/: env.py
migrations/versions/: 033cc4d830a0_enable_pgcrypto_extension.py  2708ec431c24_add_users_table.py  64f98764f76c_add_core_data_tables.py  b772e212f6b5_add_row_level_security_policies.py
performance_tests/: locustfile.py
scripts/: evaluate_agent.py
tests/integration/: test_actions.py  test_auth.py  test_complex_flows.py  test_graphql.py  test_graphql_hitl.py  test_rls.py  test_workflow.py
tests/integration/agents/: test_orchestrator.py
tests/unit/: test_shopify_client.py
tests/unit/agents/: test_shopify_tools.py
